# Sherlly_password_manager

./: Cargo.toml  README.md
src/: Cargo.toml  add_entry.rs  decrypt.rs  del_entry.rs  encrypt.rs  input_wrapper.rs  main.rs  make_db.rs  make_db_safe.rs  mass_import.rs  password_file.rs  show_pass.rs
src/src/: del_entry.rs  main.rs  make_db.rs  password_file.rs
