[package]
name = "SherllyPWD_M"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clipboard = "0.5.0"
dirs = "4.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.91"
simple-dmenu = "0.1.0"
tindercrypt = "0.3.2"
